Revert "Fixed website when used on mobile landscape devices"
This reverts commit 3c69063e13999fa8fb2599ccfd57da53858a0448.

--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ html, body {
     position:absolute;
     top:105%;
     width:100%;
-    padding: 0 0 5% 0;
 }
 
 #work {
@@ -52,39 +51,39 @@ html, body {
     width:100%;
 }
 
-@media screen and (max-width: 430px) {
-    #work {
-        top:165%;
-    }
-}
-
-@media screen and (min-width:431px) and (max-width: 600px) {
+@media screen and (max-width: 510px) {
     #work {
         top:160%;
     }
 }
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 511px) and (max-width: 659px) {
     #work {
-        top:155%;
+        top:156%;
     }
 }
 
-@media screen and (min-height: 450px) and (max-height: 550px) {
+@media screen and (min-width: 600px) and (max-width: 659px) {
     #work {
-        top:170%;
+        top:152%;
     }
 }
 
-@media screen and (min-height: 551px) and (max-height: 650px) {
+@media screen and (min-width: 660px) and (max-width: 710px) {
     #work {
-        top:165%;
+        top:154%;
     }
 }
 
-@media screen and (min-height: 651px) and (max-height:700px) {
+@media screen and (min-width: 711px) and (max-width: 989px) {
     #work {
-        top:160%;
+        top:149%;
+    }
+}
+
+@media screen and (min-width: 990px) {
+    #work {
+        top:150%;
     }
 }
 
